# ems

./: .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml
ci/: docs.yml
docs/source/: api.rst  conf.py  contributors-guide.rst  getting-started.rst  index.rst  quick-start.rst  user-guide.rst
docs/source/_static/: ems.css
docs/source/user-guide/: index.rst  your-own-device.ipynb
ems/: __init__.py  calibration.py  core.py  demo.py  osc_client_demo.py  osc_demo.py  osc_demo_2.py  socket_demo.py  socket_demo2.py  utils.py
ems/backend/devices/: FakeSerialPort.py  FrontEnd.py  Keyboard.py  Rehastim.py  TestRehastim.py
ems/backend/shared/: SerialHandler.py  SerialListener.py
ems/devices/: __init__.py  base.py  rehastim.py
ems/devices/dummy/: __init__.py  dummy.py
ems/devices/rehamove/: __init__.py  _rehamovelib.pyd  rehamove.py  rehamove_device.py  rehamove_serial.py  rehamovelib.py
ems/devices/rehamove/PyScienceMode/: decoder.py  general.py  lowlevel.py  midlevel.py  utils.py
ems/devices/rehastim/: __init__.py  rehastim.py
ems/tests/: test_device.py
tests/: test_device.py
