[project]
name = "ems"
dynamic = ["version"]
description = "The description of the package"

classifiers = [
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
]

license = {text = "Apache-2.0"}
readme = "README.md"


requires-python = ">=3.9"
dependencies = ["pyserial", "ipywidgets", "python-osc"]


[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=60",
  "setuptools-scm>=8",
]

[tool.setuptools.packages]
find = {}

[tool.setuptools_scm]
fallback_version = "9999"

[tool.ruff.lint]
ignore = ['E731', 'F401']

[tool.ruff]
extend-exclude = ["ems/devices/rehamove","ems/devices/rehastim", "ems/devices/dummy"]

